# OpenPano

./: .gitignore  CMakeLists.txt  README.md  eigen3-install.sh  image-stitching  install.sh  mk  stitch.cc  test-pano.sh
src/: CMakeLists.txt  main.cc
src/stitch/: camera.cc
